tests/snapshots/conformance__y_object_with_newlines.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{
"a": "b"
}
stdout --- 
{
    "a": "b"
}
stderr --- 
<empty>
