tests/snapshots/conformance__y_string_1_2_3_bytes_utf-8_sequences.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
["\u0060\u012a\u12AB"]
stdout --- 
["\u0060\u012a\u12AB"]
stderr --- 
<empty>
