tests/snapshots/conformance__y_string_accepted_surrogate_pair.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\uD801\udc37"]
stdout --- 
["\uD801\udc37"]
stderr --- 
<empty>
