tests/snapshots/conformance__y_string_accepted_surrogate_pairs.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\ud83d\ude39\ud83d\udc8d"]
stdout --- 
["\ud83d\ude39\ud83d\udc8d"]
stderr --- 
<empty>
