tests/snapshots/conformance__y_string_backslash_and_u_escaped_zero.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\\u0000"]
stdout --- 
["\\u0000"]
stderr --- 
<empty>
