tests/snapshots/conformance__y_string_backslash_doublequotes.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
["\""]
stdout --- 
["\""]
stderr --- 
<empty>
