tests/snapshots/conformance__y_string_comments.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
["a/*b*/c/*d//e"]
stdout --- 
["a/*b*/c/*d//e"]
stderr --- 
<empty>
