tests/snapshots/conformance__y_string_double_escape_a.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\\a"]
stdout --- 
["\\a"]
stderr --- 
<empty>
