tests/snapshots/conformance__y_string_double_escape_n.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\\n"]
stdout --- 
["\\n"]
stderr --- 
<empty>
