tests/snapshots/conformance__y_string_escaped_control_character.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\u0012"]
stdout --- 
["\u0012"]
stderr --- 
<empty>
